--- a/Hotel-Yadran/src/components/admin/styles/adminRooms.css
+++ b/Hotel-Yadran/src/components/admin/styles/adminRooms.css
@@ -26,6 +26,19 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.d-flex .align-items-center .rounded-3 .px-4{
+    width: 100%;
+    margin-right: 10px;
+}
+
+.icon-acciones{
+    margin-left: -20px;
+}
+
+.icono-acciones{
+    margin-right: 10px;
+}
+
 .badge {
     font-size: 0.85rem;
 }
