--- a/Hotel-Yadran/src/components/public/rooms/publicRooms.css
+++ b/Hotel-Yadran/src/components/public/rooms/publicRooms.css
@@ -12,6 +12,7 @@
     background-size: cover;
     background-position: center;
     padding: 6rem 0;
+    margin-top: 80px;
     margin-bottom: 2rem;
     position: relative;
     text-align: center;
